<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">UDP通讯工具</string>
    <string name="ip">远程地址</string>
    <string name="port">远程端口</string>
    <string name="localport">本地端口</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开连接</string>
    <string name="shex">16进制发送</string>
    <string name="rhex">16进制接收</string>
    <string name="rdata">接收数据 字符集:</string>
    <string name="sdata">发送数据 字符集</string>
    <string name="btnsend">发送</string>
    <string name="menusave">保存接收数据</string>
    <string name="menuclear">清空接收数据区</string>
    <string name="menuexit">退出</string>
    <string name="savefilepath">保存文件路径</string>
    <string name="alertok">确定</string>
    <string name="alertcancel">取消</string>
    <string name="alertsavefiletilte">保存文件</string>
    <string name="alertsavefileok">保存文件成功!</string>
    <string name="alertsavefilefail">保存文件失败:</string>
    <string name="alertsavefilepatherror">文件路径不存在</string>
</resources>
