<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:stretchColumns="1,3">
	<TableRow>
		<TextView android:layout_width="fill_parent"  android:layout_height="wrap_content" android:text="@string/ip"/>
		<EditText android:id="@+id/etremoteip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_span="3"
		android:text="192.168.0.104"/>
	</TableRow>
	<TableRow>
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/port" />
		<EditText android:id="@+id/etremoteport" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:numeric="integer" android:maxLength="5" android:text="8801"/>
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/localport"/>
		<EditText android:id="@+id/etlocalport" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:numeric="integer"  android:maxLength="5"  android:text="8802"/>
	</TableRow>
	<TableRow>
		<Button android:id="@+id/btnconnect" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/connect" android:layout_span="2"/>
		<Button android:id="@+id/btndisconnect" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/disconnect" android:layout_span="2"/>
	</TableRow>
	<TableRow>
		<CheckBox android:id="@+id/cbshex" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/shex" android:layout_span="2"/>
		<CheckBox android:id="@+id/cbrhex" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rhex" android:layout_span="2"/>
	</TableRow>>
	<TableRow>
		<TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1" android:layout_span="4">
			<TableRow>
				<TextView android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/rdata" android:gravity="center_vertical"/>
				<Spinner android:id="@+id/sprcharcodes" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:drawSelectorOnTop="true"/>
			</TableRow>
		</TableLayout>
	</TableRow>
	<TableRow>
		<EditText android:id="@+id/etrdata" android:layout_width="fill_parent" android:layout_height="fill_parent" android:singleLine="false" android:lines="3"
			android:editable="false" android:gravity="top" android:layout_span="4" android:scrollbars="vertical"/>
	</TableRow>
	<TableRow>
		<TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1" android:layout_span="4">
				<TableRow>
					<TextView android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/sdata" android:gravity="center_vertical"/>
					<Spinner android:id="@+id/spscharcodes" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:drawSelectorOnTop="true"/>
				</TableRow>
		</TableLayout>
	</TableRow>
	<TableRow>
		<EditText android:id="@+id/etsdata" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_span="3"/>
		<Button android:id="@+id/btnsend" android:layout_width="wrap_content" android:layout_height="wrap_content"  android:text="@string/btnsend" />
	</TableRow>
	
</TableLayout>
